--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^8.0.1",
+    "node-device-detector": "^2.0.17",
     "request-ip": "^3.3.0"
   }
 }
