--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.4",
     "mongoose": "^8.0.1",
     "node-device-detector": "^2.0.17",
+    "platform": "^1.3.6",
     "request-ip": "^3.3.0"
   }
 }
